[package]
name = "tarantool_codegen"
version = "0.1.0"
authors = ["loo.maclin <loo.maclin@protonmail.com>"]

[lib]
proc-macro = true

[dependencies]
syn = "0.11.9"
quote = "0.3.15"
rmpv = "0.3.2"
tarantool = { path = "/home/loomaclin/IdeaProjects/tarantool_rs" }
hyper = { git = "https://github.com/hyperium/hyper.git", branch = "master" }
futures = "0.1.11"